Updates to functions and input validation. GUI updated with logo and enhanced layout.

--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
     "default_class_capacity": 20,
-    "notification_message": "Don't forget your class today!"
+    "notification_message": "Thank you for enrolling!"
 }
